--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,26 +5,36 @@ repos:
     hooks:
       - id: trailing-whitespace
         name: Trim trailing whitespace
+        stages: [pre-commit]
       - id: end-of-file-fixer
         name: Fix end of files
+        stages: [pre-commit]
       - id: check-yaml
         name: Check YAML syntax
+        stages: [pre-commit]
       - id: check-json
         name: Check JSON syntax
+        stages: [pre-commit]
       - id: check-added-large-files
         name: Check for large files
         args: ['--maxkb=1000']
+        stages: [pre-commit]
       - id: check-merge-conflict
         name: Check for merge conflicts
+        stages: [pre-commit]
       - id: detect-private-key
         name: Detect private keys
+        stages: [pre-commit]
       - id: check-case-conflict
         name: Check for case conflicts
+        stages: [pre-commit]
       - id: mixed-line-ending
         name: Check line endings
         args: ['--fix=lf']
+        stages: [pre-commit]
       - id: check-executables-have-shebangs
         name: Check executables have shebangs
+        stages: [pre-commit]
 
   # Prevent committing to main directly
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -33,6 +43,7 @@ repos:
       - id: no-commit-to-branch
         name: Don't commit to main branch
         args: [--branch, main, --branch, master]
+        stages: [pre-commit]
 
   # Secret scanning - CRITICAL for security
   - repo: https://github.com/Yelp/detect-secrets
@@ -42,6 +53,7 @@ repos:
         name: Detect secrets in code
         args: ['--baseline', '.secrets.baseline']
         exclude: package-lock.json|yarn.lock|poetry.lock
+        stages: [pre-commit]
 
   # Python - Black formatter
   - repo: https://github.com/psf/black
@@ -52,6 +64,7 @@ repos:
         language_version: python3.11
         args: [--line-length=120]
         files: \.py$
+        stages: [pre-commit]
 
   # Python - Flake8 linter
   - repo: https://github.com/pycqa/flake8
@@ -65,6 +78,7 @@ repos:
           --ignore=E203,W503,E501
         ]
         files: \.py$
+        stages: [pre-commit]
 
   # Python - isort for imports
   - repo: https://github.com/pycqa/isort
@@ -74,6 +88,7 @@ repos:
         name: Sort Python imports
         args: [--profile=black, --line-length=120]
         files: \.py$
+        stages: [pre-commit]
 
   # Python - Security linter (Bandit)
   - repo: https://github.com/PyCQA/bandit
@@ -84,6 +99,7 @@ repos:
         args: ['-c', 'pyproject.toml', '-ll', '-r', 'backend/']
         additional_dependencies: ['bandit[toml]']
         pass_filenames: false
+        stages: [pre-commit]
 
   # Docker - Hadolint for Dockerfile linting
   - repo: https://github.com/hadolint/hadolint
@@ -92,6 +108,7 @@ repos:
       - id: hadolint-docker
         name: Lint Dockerfiles
         args: [--ignore, DL3008, --ignore, DL3013]
+        stages: [pre-commit]
 
   # JavaScript/TypeScript - Prettier
   - repo: https://github.com/pre-commit/mirrors-prettier
@@ -101,8 +118,9 @@ repos:
         name: Format JS/TS with Prettier
         types_or: [javascript, jsx, ts, tsx, json, css, scss, html]
         args: [--write]
+        stages: [pre-commit]
 
-  # JavaScript - ESLint
+  # JavaScript - ESLint  
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.56.0
     hooks:
@@ -116,6 +134,7 @@ repos:
           - eslint-plugin-react-hooks@4.6.0
           - '@typescript-eslint/eslint-plugin@6.13.0'
           - '@typescript-eslint/parser@6.13.0'
+        stages: [pre-commit]
 
   # Markdown linting
   - repo: https://github.com/igorshubovych/markdownlint-cli
@@ -124,7 +143,8 @@ repos:
       - id: markdownlint
         name: Lint Markdown files
         args: [--fix]
+        stages: [pre-commit]
 
 # Configuration
-default_stages: [commit]
+default_stages: [pre-commit]
 fail_fast: false
